--- a/src/views/Dimension/list.styles.css
+++ b/src/views/Dimension/list.styles.css
@@ -4,51 +4,18 @@
 }
 
 .body {
+    width     : 100%;
     height    : 100%;
     min-height: 850px;
-    padding   : 20px;
+    padding   : 1rem;
     background: white;
 }
 
-.question {
-    display      : flex;
-    margin-bottom: 10px;
-}
-
-.question__body {
-    display: flex;
-    width  : 100%;
-    border : 5px solid rgba(128, 128, 128, 0.9);
-}
-
-.question__body * {
-    padding        : 10px;
+.dimension {
     display        : flex;
-    align-items    : center;
-    justify-content: center;
-}
-
-.question__status {
-    padding        : 10px;
-    padding-left   : 0;
-    display        : flex;
-    font-size      : 25px;
-    cursor         : pointer;
-    align-items    : center;
-    justify-content: center;
-}
-
-.question__title {
-    min-width   : 100px;
-    border-right: 5px solid rgba(128, 128, 128, 0.9);
-}
-
-.question__content {
-    min-width      : 70%;
-    justify-content: flex-start;
-}
-
-.question__actions {
+    justify-content: space-between;
+    padding        : 0.5rem;
+    margin-bottom  : 0.5rem;
     width          : 100%;
-    justify-content: flex-end;
+    border         : 5px solid rgba(128, 128, 128, 0.2);
 }
