--- a/src/views/Question/list.styles.css
+++ b/src/views/Question/list.styles.css
@@ -3,9 +3,12 @@
     justify-content: space-between;
 }
 
+.main {
+    height: 100%;
+}
+
 .body {
-    height    : 100%;
-    min-height: 850px;
+    height    : 80%;
     padding   : 20px;
     background: white;
 }
